--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Proba</h1>
+    <a href="./AEA0_PREGUNTES_GITHUB_PAGES/AEA0_PREGUNTES_GITHUB.html">AEA0_PREGUNTES_GITHUB</a>
     
 </body>
 </html>
