--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Proba</title>
 </head>
 <body>
-    <h1>Proba</h1>
+    <h1>AEA 0. Preguntes GitHub Pages (URL pública GitHub Pages)</h1>
     <a href="./AEA0_PREGUNTES_GITHUB_PAGES/AEA0_PREGUNTES_GITHUB.html">AEA0_PREGUNTES_GITHUB</a>
     
 </body>
